--- a/home/.xsessionrc
+++ b/home/.xsessionrc
@@ -1,3 +1,6 @@
 #!/bin/bash
 setxkbmap -model thinkpad60 -layout br
 xscreensaver -no-splash &
+
+#https://help.ubuntu.com/community/NumLock
+/usr/bin/numlockx on
